--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -3,5 +3,11 @@
   "alwaysUpdateLinks": true,
   "showInlineTitle": false,
   "livePreview": false,
-  "readableLineLength": false
+  "readableLineLength": false,
+  "pdfExportSettings": {
+    "pageSize": "A4",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
